Fri Aug 01 13:25:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Changed the version to 0.1-cvsdate.

Fri Aug 01 13:23:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimTabBar.cpp:
	* src/QGaimTabBar.h:
	* src/QGaimTabWidget.cpp:
	* src/QGaimTabWidget.h:
	* gaim.pro:
	  - Added a subclassed QTabBar and QTabWidget, which will be used
	    for some things such as typing notification shortly.

Thu Jul 31 16:57:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The text entry field should now be auto-focused, though it
	    appears it doesn't always auto-focus under some cases, which
	    I have not yet narrowed down. For now, it works mostly.

Thu Jul 31 16:46:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Clicking the Conversations button should no longer be able to
	    segfault.

Thu Jul 31 13:30:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Alternative package names for glib2 are now supported.

Thu Jul 31 08:29:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Clicking Send when there's nothing in the entry field no longer
	    crashes.
	  - The last character of an outgoing message isn't cut off anymore.

Thu Jul 31 08:07:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Raise the conversation window when starting a new conversation
	    with a user from your buddy list.

	* src/QGaimConvWindow.cpp:
	  - Probably fixed some issues that might arise with sending to
	    chats.

Thu Jul 31 01:07:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Require libglib2.0 and libgaim.

Thu Jul 31 00:57:56 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Updated to version 0.1.0 release.
